<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="order_button">Add Order</string>
    <string name="quantity_num">1</string>
    <string name="remove_order">Remove Order</string>
    <string name="price_amount">$0</string>
    <string name="price">Price</string>
    <string name="addbutton">+</string>
    <string name="minusbutton">-</string>
    <string name="toppings">TOPPINGS</string>
    <string name="order_summary_name">Name: </string>
    <string name="whipped_cream">WHIPPED CREAM</string>
    <string name="chocolate">CHOCOLATE</string>
    <string name="order_summary">ORDER SUMMARY </string>
    <string name="order_summary_whipped_cream">Add whipped cream? </string>
    <string name="order_summary_chocolate">Add chocolate? </string>
    <string name="order_summary_quantity">Quantity: </string>
    <string name="order_summary_total">Total: </string>

</resources>
